@@ -45,14 +45,14 @@ F2 <-  DeconCdf(w2,sig2,error='normal',bw=bw2)
 # plot the results
 #postscript("pdf_1.eps", pointsize = 16)
 par(mfrow=c(2,2))
-plot.DeconPdf(f1,  col="red", lwd=3, lty=2, xlab="x", ylab="f(x)", main="")
+plot(f1,  col="red", lwd=3, lty=2, xlab="x", ylab="f(x)", main="")
 lines(density(x1, from=min(w1), to=max(w1)), lwd=3, lty=1)
 lines(density(w1), col="blue", lwd=3, lty=3)
-plot.DeconPdf(f2,  col="red", lwd=3, lty=2, xlab="x", ylab="f(x)", main="")
+plot(f2,  col="red", lwd=3, lty=2, xlab="x", ylab="f(x)", main="")
 lines(density(x2, from=min(w2), to=max(w2)), lwd=3, lty=1)
 lines(density(w2), col="blue", lwd=3, lty=3)
 
-plot.DeconCdf(F2,  col="red", lwd=3, lty=2, xlab="x", ylab="F(x)", main="")
+plot(F2,  col="red", lwd=3, lty=2, xlab="x", ylab="F(x)", main="")
 lines(SDF(x2), lwd=3, lty=1)
 lines(SDF(w2), col="blue", lwd=3, lty=3)
 # dev.off()
@@ -75,11 +75,11 @@ bw3 <- bw.dboot1(w3,sig=sig3, error="normal")
 # plot the results
 #postscript("pdf_cdf_2.eps", pointsize = 16)
 par(mfrow=c(1,2))
-plot.DeconPdf(f3,  col="red", lwd=3, lty=2, ylim=c(0,0.4), xlab="x", ylab="f(x)", main="")
+plot(f3,  col="red", lwd=3, lty=2, ylim=c(0,0.4), xlab="x", ylab="f(x)", main="")
 lines(density(x3, adjust=2), lwd=3, lty=1)
 lines(density(w3, adjust=2), col="blue", lwd=3, lty=3)
 
-plot.DeconCdf(F3,  col="red", lwd=3, lty=2, xlab="x",ylab="F(x)", main="")
+plot(F3,  col="red", lwd=3, lty=2, xlab="x",ylab="F(x)", main="")
 lines(SDF(x3), lwd=3, lty=1)
 lines(SDF(w3), col="blue", lwd=3, lty=3)
 #dev.off()
@@ -99,7 +99,7 @@ bw1 <- bw.dboot1(w, sig)
 (m1 <-  DeconNpr(w, sig, y ,error="normal", from=0.9*min(x), to=0.9*max(x)))
 # plot the results
 #postscript("npr_1.eps", pointsize = 16)
-plot.DeconNpr(m1,  col="red", lwd=3, lty=2, xlab="x", ylab="m(x)", main="", zero.line=FALSE)
+plot(m1,  col="red", lwd=3, lty=2, xlab="x", ylab="m(x)", main="", zero.line=FALSE)
 lines(ksmooth(x,y, kernel = "normal", 2, range.x=c(0.9*min(x),0.9*max(x))), lwd=3, lty=1)
 lines(ksmooth(w,y, kernel = "normal", 2, range.x=c(0.9*min(x),0.9*max(x))), col="blue", lwd=3, lty=3)
 #dev.off()
