@@ -1,0 +1,21 @@
+% This is a template R document file
+% Distributed under GPL 3 or later
+
+\name{print.Decon}
+\alias{print.Decon}
+\title{Print Decon Objects}
+\description{
+  To print objects generated by DeconPdf(...), DeconCdf(...), DeconCPdf(...), or DeconNpr(...).
+}
+\details{
+This function is to print the summary description from the object generated by DeconPdf(...), DeconCdf(...), DeconCPdf(...), or DeconNpr(...)}
+\author{
+  X.F. Wang \email{wangx6@ccf.org}
+
+  B. Wang  \email{bwang@jaguar1.usouthal.edu}
+}
+\seealso{
+ \code{\link{DeconPdf}, \link{DeconCdf}, \link{DeconCPdf}, \link{DeconNpr}}.
+}
+\keyword{smooth}
+
