@@ -1,21 +1,0 @@
-% This is a template R document file
-% Distributed under GPL 3 or later
-
-\name{print.DeconNpr}
-\alias{print.DeconNpr}
-\title{Print DeconNpr Objects}
-\description{
-  To print objects generated by DeconNpr(...)
-}
-\details{
-This function is to print the DeconNpr object generated  by DeconNpr}
-\author{
-  X.F. Wang \email{wangx6@ccf.org}
-
-  B. Wang  \email{bwang@jaguar1.usouthal.edu}
-}
-\seealso{
- \code{\link{DeconNpr}}.
-}
-\keyword{smooth}
-
